--- a/.vscode/Index.html
+++ b/.vscode/Index.html
@@ -2,20 +2,20 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Гостиница «SEDONA»</title>
+    <title>Sedona</title>
   </head>
   <body>
   <header class="page-header">
     <nav class="navigation">
       <ul class="navigation-list">
         <li class="navigation-item">
-          <a class="navigation-link" href="about.html" >О нас</a>
+          <a class="navigation-link" href="main.html" >главная</a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link" href="catalog.html">Каталог</a>
+          <a class="navigation-link" href="about.html">О Седоне</a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link" href="faq.html">Частые вопросы</a>
+          <a class="navigation-link" href="hotel.html">гостиницы</a>
         </li>
       </ul>
       <ul class="navigation-list navigation-user">
@@ -29,19 +29,20 @@
         <li class="navigation-item">
           <a class="navigation-link" href="#">
             <span class="visually-hidden">
-              Корзина
+              уведомления
             </span>
           </a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link" href="#">Вход</a>
+          <a class="navigation-link" href="#">хочу сюда</a>
         </li>
       </ul>
     </nav>
   </header>
   <main class="mail-index">
-    <h1 class="visually-hidden">Гостиница «SEDONA»</h1>
-    <img class="logo">
+    <h1 class="visually-hidden">Sedona</h1>
+    <img class="logo" src="" alt="логотип Sedona">
+
   </main>
 </body>
 </html>
